Created page with ":* [[File:Sketcher_CreateBSplineByInterpolation.svg|32px]] [[Sketcher_CreateBSplineByInterpolation|B-spline z uzlů]]: Vytvoří křivku B-spline z uzlových bodů. Idem."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -151,9 +151,7 @@
 <ul><li><span id="Sketcher_CompCreateBSpline"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Vytvo&#345;it B-Splajn:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSpline.svg&amp;filetimestamp=20240101085839&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Splajn</a>: Vytvo&#345;&iacute; k&#345;ivku B-spline z kontroln&iacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Nebo z uzlov&yacute;ch bod&#367;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSpline.svg&amp;filetimestamp=20240101170403&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodick&aacute; B-spline</a>: Vytvo&#345;&iacute; periodickou (uzav&#345;enou) B-spline k&#345;ivku z kontroln&iacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSplineByInterpolation.svg&amp;filetimestamp=20240520185146&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-Spline From Knots</a>: Creates a B-spline curve from knot points. Idem.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSplineByInterpolation.svg&amp;filetimestamp=20240520185146&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-spline z uzl&#367;</a>: Vytvo&#345;&iacute; k&#345;ivku B-spline z uzlov&yacute;ch bod&#367;. Idem.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSplineByInterpolation.svg&amp;filetimestamp=20240405092810&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodic B-Spline From Knots</a>: Creates a periodic (closed) B-spline curve from knot points. Idem.</li></ul></dd></dl>
 </div>
@@ -710,13 +708,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115726
+Cached time: 20260118115804
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.505 seconds
-Real time usage: 0.760 seconds
-Preprocessor visited node count: 1506/1000000
+CPU time usage: 0.473 seconds
+Real time usage: 0.637 seconds
+Preprocessor visited node count: 1505/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -726,19 +724,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.969      1 -total
- 22.66%    9.508      1 Template:Sketcher_Tools_navi/cs
- 15.30%    6.423      1 Template:Userdocnavi/cs
- 12.70%    5.329      2 Template:Navigation_menu_2
- 10.06%    4.224      1 Template:PropertyView
-  6.91%    2.902     34 Template:Version
-  6.27%    2.630      2 Template:Docnav
-  6.17%    2.589      1 Template:Variable
-  5.99%    2.516      6 Template:Caption
-  5.63%    2.363     14 Template:KEY
+100.00%   39.315      1 -total
+ 19.01%    7.473      1 Template:Sketcher_Tools_navi/cs
+ 13.14%    5.165      2 Template:Navigation_menu_2
+ 12.92%    5.081      1 Template:PropertyView
+ 12.04%    4.733      1 Template:Userdocnavi/cs
+  7.85%    3.085     34 Template:Version
+  7.70%    3.027      2 Template:Docnav
+  6.93%    2.724      1 Template:Variable
+  6.12%    2.408      8 Template:VersionPlus
+  6.12%    2.404      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115725 and revision id 1740369. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115803 and revision id 1740371. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
