--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -153,9 +153,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSpline.svg&amp;filetimestamp=20240101170403&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSpline.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodick&aacute; B-spline</a>: Vytvo&#345;&iacute; periodickou (uzav&#345;enou) B-spline k&#345;ivku z kontroln&iacute;ch bod&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>: Jedn&aacute; se o stejn&yacute; n&aacute;stroj jako <a href="../Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>, ale s odli&scaron;n&yacute;m po&#269;&aacute;te&#269;n&iacute;m re&#382;imem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSplineByInterpolation.svg&amp;filetimestamp=20240520185146&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-spline z uzl&#367;</a>: Vytvo&#345;&iacute; k&#345;ivku B-spline z uzlov&yacute;ch bod&#367;. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSplineByInterpolation.svg&amp;filetimestamp=20240405092810&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodick&aacute; B-spline z uzl&#367;</a>: Vytvo&#345;&iacute; periodickou (uzav&#345;enou) B-spline k&#345;ivku z uzlov&yacute;ch bod&#367;. Idem.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleConstruction.svg&amp;filetimestamp=20240228175128&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleConstruction.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a>: Either toggles the geometry creation tools to/from construction mode, or toggles selected geometry to/from construction geometry.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleConstruction.svg&amp;filetimestamp=20240228175128&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleConstruction.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">P&#345;epnout konstruk&#269;n&iacute; geometrii</a>: P&#345;epne n&aacute;stroje pro vytv&aacute;&#345;en&iacute; geometrie do/z konstruk&#269;n&iacute;ho re&#382;imu nebo p&#345;epne vybranou geometrii do/z konstruk&#269;n&iacute; geometrie.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Constraints">Constraints</span></h3>
 </div>
@@ -706,13 +704,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115838
+Cached time: 20260118115925
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.509 seconds
-Real time usage: 0.714 seconds
-Preprocessor visited node count: 1504/1000000
+CPU time usage: 0.485 seconds
+Real time usage: 0.759 seconds
+Preprocessor visited node count: 1503/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -722,19 +720,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.978      1 -total
- 26.21%   13.099      1 Template:Sketcher_Tools_navi/cs
- 12.81%    6.401      1 Template:Userdocnavi/cs
- 12.74%    6.366      2 Template:Navigation_menu_2
-  9.28%    4.640      1 Template:PropertyView
-  7.62%    3.808     34 Template:Version
-  6.56%    3.280     14 Template:KEY
-  6.30%    3.151      2 Template:Docnav
-  5.18%    2.588      6 Template:Caption
-  5.11%    2.556      8 Template:VersionPlus
+100.00%   68.276      1 -total
+ 23.99%   16.376      1 Template:Sketcher_Tools_navi/cs
+ 18.94%   12.930      1 Template:PropertyView
+ 15.54%   10.611      2 Template:Navigation_menu_2
+ 13.59%    9.279      1 Template:Userdocnavi/cs
+  9.22%    6.293     34 Template:Version
+  8.62%    5.883      1 Template:Variable
+  7.03%    4.801     14 Template:KEY
+  4.37%    2.984      8 Template:VersionPlus
+  3.82%    2.611      2 Template:Verze
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115837 and revision id 1740373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115924 and revision id 1740375. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
