--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -154,9 +154,9 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreateBSplineByInterpolation.svg&amp;filetimestamp=20240520185146&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreateBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-spline z uzl&#367;</a>: Vytvo&#345;&iacute; k&#345;ivku B-spline z uzlov&yacute;ch bod&#367;. Idem.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CreatePeriodicBSplineByInterpolation.svg&amp;filetimestamp=20240405092810&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CreatePeriodicBSplineByInterpolation.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodick&aacute; B-spline z uzl&#367;</a>: Vytvo&#345;&iacute; periodickou (uzav&#345;enou) B-spline k&#345;ivku z uzlov&yacute;ch bod&#367;. Idem.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ToggleConstruction.svg&amp;filetimestamp=20240228175128&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ToggleConstruction.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">P&#345;epnout konstruk&#269;n&iacute; geometrii</a>: P&#345;epne n&aacute;stroje pro vytv&aacute;&#345;en&iacute; geometrie do/z konstruk&#269;n&iacute;ho re&#382;imu nebo p&#345;epne vybranou geometrii do/z konstruk&#269;n&iacute; geometrie.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Constraints">Constraints</span></h3>
-</div>
+<p><span id="Constraints"></span>
+</p>
+<h3><span class="mw-headline" id="Vazby_2">Vazby</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>These are tools for creating <a href="#Constraints">constraints</a>. Some constraints require the use of <a href="../Sketcher_helper_constraint.html" title="Sketcher helper constraint">helper constraints</a>.
 </p>
@@ -704,12 +704,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118115925
+Cached time: 20260118120012
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.485 seconds
-Real time usage: 0.759 seconds
+CPU time usage: 0.544 seconds
+Real time usage: 0.768 seconds
 Preprocessor visited node count: 1503/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
@@ -720,19 +720,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   68.276      1 -total
- 23.99%   16.376      1 Template:Sketcher_Tools_navi/cs
- 18.94%   12.930      1 Template:PropertyView
- 15.54%   10.611      2 Template:Navigation_menu_2
- 13.59%    9.279      1 Template:Userdocnavi/cs
-  9.22%    6.293     34 Template:Version
-  8.62%    5.883      1 Template:Variable
-  7.03%    4.801     14 Template:KEY
-  4.37%    2.984      8 Template:VersionPlus
-  3.82%    2.611      2 Template:Verze
+100.00%   37.312      1 -total
+ 24.69%    9.212      1 Template:Sketcher_Tools_navi/cs
+ 18.59%    6.936      2 Template:Navigation_menu_2
+ 13.10%    4.889      1 Template:Userdocnavi/cs
+  9.13%    3.406      1 Template:PropertyView
+  7.99%    2.980      2 Template:Docnav
+  7.19%    2.684     34 Template:Version
+  5.18%    1.932      6 Template:Caption
+  5.13%    1.913     14 Template:KEY
+  5.00%    1.865      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118115924 and revision id 1740375. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120011 and revision id 1740377. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
