Created page with "Jedná se o nástroje pro vytváření [[#Constraints|vazeb]]. Některé vazby vyžadují použití [[Sketcher_helper_constraint|pomocných vazeb]]."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -157,10 +157,8 @@
 <p><span id="Constraints"></span>
 </p>
 <h3><span class="mw-headline" id="Vazby_2">Vazby</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>These are tools for creating <a href="#Constraints">constraints</a>. Some constraints require the use of <a href="../Sketcher_helper_constraint.html" title="Sketcher helper constraint">helper constraints</a>.
+<p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; <a href="#Constraints">vazeb</a>. N&#283;kter&eacute; vazby vy&#382;aduj&iacute; pou&#382;it&iacute; <a href="../Sketcher_helper_constraint.html" title="Sketcher helper constraint">pomocn&yacute;ch vazeb</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span id="Sketcher_CompDimensionTools"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Dimensional Constraints:</span></li></ul>
 </div>
@@ -704,13 +702,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118120012
+Cached time: 20260118120147
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.544 seconds
-Real time usage: 0.768 seconds
-Preprocessor visited node count: 1503/1000000
+CPU time usage: 0.480 seconds
+Real time usage: 0.719 seconds
+Preprocessor visited node count: 1502/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -720,19 +718,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.312      1 -total
- 24.69%    9.212      1 Template:Sketcher_Tools_navi/cs
- 18.59%    6.936      2 Template:Navigation_menu_2
- 13.10%    4.889      1 Template:Userdocnavi/cs
-  9.13%    3.406      1 Template:PropertyView
-  7.99%    2.980      2 Template:Docnav
-  7.19%    2.684     34 Template:Version
-  5.18%    1.932      6 Template:Caption
-  5.13%    1.913     14 Template:KEY
-  5.00%    1.865      1 Template:Variable
+100.00%   56.051      1 -total
+ 21.45%   12.021      1 Template:Sketcher_Tools_navi/cs
+ 15.96%    8.946      2 Template:Navigation_menu_2
+ 13.57%    7.604      1 Template:Userdocnavi/cs
+ 10.34%    5.796      1 Template:PropertyView
+  9.29%    5.207     34 Template:Version
+  8.75%    4.904     14 Template:KEY
+  6.57%    3.682      2 Template:Docnav
+  5.39%    3.021      8 Template:VersionPlus
+  5.38%    3.014      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120011 and revision id 1740377. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120147 and revision id 1740379. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
