--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -160,9 +160,7 @@
 <p>Jedn&aacute; se o n&aacute;stroje pro vytv&aacute;&#345;en&iacute; <a href="#Constraints">vazeb</a>. N&#283;kter&eacute; vazby vy&#382;aduj&iacute; pou&#382;it&iacute; <a href="../Sketcher_helper_constraint.html" title="Sketcher helper constraint">pomocn&yacute;ch vazeb</a>.
 </p>
 <ul><li><span id="Sketcher_CompDimensionTools"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Rozm&#283;rov&eacute; vazby:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Dimension</a>: Is the context-sensitive constraint tool of the Sketcher Workbench. Based on the current selection, it offers appropriate dimensional constraints, but also geometric constraints. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Rozm&#283;r</a>: Jedn&aacute; se o n&aacute;stroj pro kontextov&eacute; vazby v pracovn&iacute;m prost&#345;ed&iacute; Sketcher. Na z&aacute;klad&#283; aktu&aacute;ln&iacute;ho v&yacute;b&#283;ru nab&iacute;z&iacute; vhodn&eacute; rozm&#283;rov&eacute; vazby, ale tak&eacute; geometrick&eacute; vazby. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal Dimension</a>: Fixes the horizontal distance between two points or the endpoints of a line. If a single point is pre-selected, the distance is relative to the origin of the sketch.</li></ul></dd></dl>
 </div>
@@ -700,13 +698,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118120237
+Cached time: 20260118120347
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.416 seconds
-Real time usage: 0.556 seconds
-Preprocessor visited node count: 1501/1000000
+CPU time usage: 0.420 seconds
+Real time usage: 0.587 seconds
+Preprocessor visited node count: 1500/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -716,19 +714,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.289      1 -total
- 19.70%    5.966      1 Template:Sketcher_Tools_navi/cs
- 14.84%    4.496      1 Template:Userdocnavi/cs
- 14.16%    4.288      2 Template:Navigation_menu_2
- 12.20%    3.694      1 Template:PropertyView
-  7.69%    2.328      1 Template:Variable
-  7.50%    2.271     34 Template:Version
-  7.25%    2.196      2 Template:Docnav
-  5.35%    1.621      6 Template:Caption
-  5.10%    1.545      8 Template:VersionPlus
+100.00%   40.952      1 -total
+ 23.65%    9.684      1 Template:Sketcher_Tools_navi/cs
+ 16.19%    6.629      2 Template:Navigation_menu_2
+ 14.46%    5.923      1 Template:Userdocnavi/cs
+  9.09%    3.722      1 Template:PropertyView
+  7.54%    3.087     34 Template:Version
+  6.77%    2.772     14 Template:KEY
+  6.75%    2.765      8 Template:VersionPlus
+  6.50%    2.661      2 Template:Docnav
+  4.56%    1.869      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120237 and revision id 1740381. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120346 and revision id 1740383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
