--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -161,9 +161,7 @@
 </p>
 <ul><li><span id="Sketcher_CompDimensionTools"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Rozm&#283;rov&eacute; vazby:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Dimension.svg&amp;filetimestamp=20240102162811&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Dimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Dimension.html" title="Sketcher Dimension">Rozm&#283;r</a>: Jedn&aacute; se o n&aacute;stroj pro kontextov&eacute; vazby v pracovn&iacute;m prost&#345;ed&iacute; Sketcher. Na z&aacute;klad&#283; aktu&aacute;ln&iacute;ho v&yacute;b&#283;ru nab&iacute;z&iacute; vhodn&eacute; rozm&#283;rov&eacute; vazby, ale tak&eacute; geometrick&eacute; vazby. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal Dimension</a>: Fixes the horizontal distance between two points or the endpoints of a line. If a single point is pre-selected, the distance is relative to the origin of the sketch.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizont&aacute;ln&iacute; rozm&#283;r</a>: Ur&#269;uje horizont&aacute;ln&iacute; vzd&aacute;lenost mezi dv&#283;ma body nebo koncov&yacute;mi body p&#345;&iacute;mky. Pokud je p&#345;edem vybr&aacute;n jeden bod, vzd&aacute;lenost se vztahuje k po&#269;&aacute;tku n&aacute;&#269;rtu.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">Vertical Dimension</a>: Fixes the vertical distance between two points or the endpoints of a line. If a single point is pre-selected, the distance is relative to the origin of the sketch.</li></ul></dd></dl>
 </div>
@@ -698,13 +696,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118120347
+Cached time: 20260118120424
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.420 seconds
-Real time usage: 0.587 seconds
-Preprocessor visited node count: 1500/1000000
+CPU time usage: 0.396 seconds
+Real time usage: 0.680 seconds
+Preprocessor visited node count: 1499/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -714,19 +712,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.952      1 -total
- 23.65%    9.684      1 Template:Sketcher_Tools_navi/cs
- 16.19%    6.629      2 Template:Navigation_menu_2
- 14.46%    5.923      1 Template:Userdocnavi/cs
-  9.09%    3.722      1 Template:PropertyView
-  7.54%    3.087     34 Template:Version
-  6.77%    2.772     14 Template:KEY
-  6.75%    2.765      8 Template:VersionPlus
-  6.50%    2.661      2 Template:Docnav
-  4.56%    1.869      1 Template:Variable
+100.00%   47.582      1 -total
+ 27.29%   12.985      1 Template:Sketcher_Tools_navi/cs
+ 12.82%    6.099      1 Template:Userdocnavi/cs
+ 11.46%    5.455      2 Template:Navigation_menu_2
+ 10.62%    5.052      1 Template:PropertyView
+  6.72%    3.198      5 Template:MenuCommand
+  6.50%    3.093      1 Template:Variable
+  6.46%    3.076      1 Template:TOCright
+  6.38%    3.034     34 Template:Version
+  5.32%    2.533      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120346 and revision id 1740383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118120423 and revision id 1740385. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
