Created page with "Дървовидният изглед винаги показва колона с иконите и етикетите на обектите. Две допълнителни колони също могат да бъдат показани по желание. За да активирате тези колони с десния бутон на мишката щракнете върху дървовидния изглед и в контекстното меню избер..."

--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -32,7 +32,7 @@
 <p><span id="Tree_View_columns"></span>
 </p>
 <h3><span id=".D0.9A.D0.BE.D0.BB.D0.BE.D0.BD.D0.B8_.D0.B2_.D0.B4.D1.8A.D1.80.D0.B2.D0.BE.D0.B2.D0.B8.D0.B4.D0.BD.D0.B8.D1.8F_.D0.B8.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1050;&#1086;&#1083;&#1086;&#1085;&#1080;_&#1074;_&#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;_&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;">&#1050;&#1086;&#1083;&#1086;&#1085;&#1080; &#1074; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h3>
-<p>The Tree View always displays a column with the icons and labels of objects. Two additional columns can optionally be displayed as well. To enable these columns right-click the Tree View and in the context menu select <b>Tree Settings</b> and then <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) and/or <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Column headings are added if more than one column is displayed. Note that the internal names of objects cannot be changed.
+<p>&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103;&#1090; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1074;&#1080;&#1085;&#1072;&#1075;&#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072; &#1089; &#1080;&#1082;&#1086;&#1085;&#1080;&#1090;&#1077; &#1080; &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;&#1090;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077;. &#1044;&#1074;&#1077; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080; &#1089;&#1098;&#1097;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1087;&#1086; &#1078;&#1077;&#1083;&#1072;&#1085;&#1080;&#1077;. &#1047;&#1072; &#1076;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1079;&#1080; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1076;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076; &#1080; &#1074; &#1082;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; <b>Tree Settings</b> &#1080; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; <b>Show Description</b> (<span style="font-size:small;"><a href="../Release_notes_0.21.html" title="Release notes 0.21">introduced in 0.21</a></span>) &#1080;/&#1080;&#1083;&#1080; <b>Show Internal Name</b> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). &#1047;&#1072;&#1075;&#1083;&#1072;&#1074;&#1080;&#1103;&#1090;&#1072; &#1085;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1080;&#1090;&#1077; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103;&#1090;, &#1072;&#1082;&#1086; &#1089;&#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1086;&#1090; &#1077;&#1076;&#1085;&#1072; &#1082;&#1086;&#1083;&#1086;&#1085;&#1072;. &#1054;&#1073;&#1098;&#1088;&#1085;&#1077;&#1090;&#1077; &#1074;&#1085;&#1080;&#1084;&#1072;&#1085;&#1080;&#1077;, &#1095;&#1077; &#1074;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1080;&#1090;&#1077; &#1080;&#1084;&#1077;&#1085;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1085;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1085;&#1080;.
 </p>
 <h3><span class="mw-headline" id="Edit_object_label">Edit object label</span></h3>
 <p>Select an object in the first column and press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">F2</span> (on Windows and Linux), or <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Enter</span> (on macOS), to edit its <span style="font-size:60%; padding-right:0.8em;">&#1044;&#1072;&#1085;&#1085;&#1080;</span><b>Label</b> property. This property can also be edited via the context menu option <b>Rename</b> or in the <a href="../Property_View.html" title="Property View">Property View</a>.
@@ -157,12 +157,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117204341
+Cached time: 20260118120747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.142 seconds
+Real time usage: 0.226 seconds
 Preprocessor visited node count: 748/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -173,19 +173,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.288      1 -total
- 18.32%    7.745      1 Template:Std_Base_navi/bg
- 18.01%    7.617      3 Template:Navigation_menu_2
- 11.90%    5.033      1 Template:Userdocnavi/bg
- 11.14%    4.712      1 Template:Interface_navi/bg
- 10.82%    4.574      2 Template:PropertyData
-  9.16%    3.873      5 Template:Version
-  8.10%    3.424     19 Template:KEY
-  6.88%    2.909      2 Template:Caption
-  6.71%    2.838      3 Template:Variable
+100.00%   50.836      1 -total
+ 20.05%   10.195      1 Template:Std_Base_navi/bg
+ 16.64%    8.459      1 Template:Interface_navi/bg
+ 16.27%    8.272      3 Template:Navigation_menu_2
+ 11.93%    6.063      1 Template:Userdocnavi/bg
+  9.70%    4.929      1 Template:TOCright
+  8.90%    4.523      2 Template:PropertyData
+  7.54%    3.832      2 Template:Caption
+  4.77%    2.426      3 Template:Variable
+  4.55%    2.313     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260117204341 and revision id 1739675. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260118120746 and revision id 1740391. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
