Created page with ":* [[File:Sketcher_ConstrainVertical.svg|32px]] [[Sketcher_ConstrainVertical|Vertikální vazba]]: Vazba zajišťuje, že přímky nebo dvojice bodů jsou vertikální."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -175,9 +175,7 @@
 <ul><li><span id="Sketcher_CompHorVer"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span>Horizont&aacute;ln&iacute;/vertik&aacute;ln&iacute; vazba:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorVer.svg&amp;filetimestamp=20240102154008&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorVer.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorVer.html" title="Sketcher ConstrainHorVer">Horizont&aacute;ln&iacute;/vertik&aacute;ln&iacute; vazba</a>: V&aacute;&#382;e p&#345;&iacute;mky nebo dvojice bod&#367; tak, aby byly vodorovn&eacute; nebo svisl&eacute;, podle toho, co je bl&iacute;&#382;e aktu&aacute;ln&iacute;mu zarovn&aacute;n&iacute;. Kombinuje n&aacute;stroje <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazba</a> a <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorizontal.svg&amp;filetimestamp=20240101173125&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazba</a>: Omezuje p&#345;&iacute;mky nebo dvojice bod&#367; tak, aby byly horizont&aacute;ln&iacute;.</li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertical Constraint</a>: Constrains lines or pairs of points to be vertical.</li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou vertik&aacute;ln&iacute;.</li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Parallel Constraint</a>: Constrains lines to be parallel.</li></ul>
 </div>
@@ -670,13 +668,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118122641
+Cached time: 20260118122723
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.369 seconds
-Real time usage: 0.522 seconds
-Preprocessor visited node count: 1486/1000000
+CPU time usage: 0.455 seconds
+Real time usage: 0.780 seconds
+Preprocessor visited node count: 1485/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -686,19 +684,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.932      1 -total
- 23.87%    7.860      1 Template:Sketcher_Tools_navi/cs
- 13.22%    4.354      2 Template:Navigation_menu_2
- 12.60%    4.151      1 Template:Userdocnavi/cs
-  8.97%    2.955      1 Template:PropertyView
-  7.84%    2.582     34 Template:Version
-  7.80%    2.569      2 Template:Docnav
-  6.84%    2.253      8 Template:VersionPlus
-  5.99%    1.972     14 Template:KEY
-  5.13%    1.689      1 Template:TOCright
+100.00%   54.761      1 -total
+ 28.31%   15.501      1 Template:Sketcher_Tools_navi/cs
+ 17.62%    9.651      2 Template:Navigation_menu_2
+ 15.48%    8.479      1 Template:Userdocnavi/cs
+  8.18%    4.479      1 Template:PropertyView
+  7.62%    4.174     34 Template:Version
+  6.11%    3.346      5 Template:MenuCommand
+  5.75%    3.150     14 Template:KEY
+  4.85%    2.654      2 Template:Docnav
+  4.31%    2.362      6 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122641 and revision id 1740435. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122722 and revision id 1740437. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
