Created page with "* [[File:Sketcher_ConstrainPerpendicular.svg|32px]] [[Sketcher_ConstrainPerpendicular|Vazba kolmosti]]: Zajišťuje, aby dvě přímky byly kolmé, nebo aby dvě hrany, nebo hrana a osa, byly kolmé v místě jejich průsečíku. Vazba může také spojit dvě hrany a vynutit jejich kolmost v místě spoje."

--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -177,9 +177,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainHorizontal.svg&amp;filetimestamp=20240101173125&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainHorizontal.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainHorizontal.html" title="Sketcher ConstrainHorizontal">Horizont&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou horizont&aacute;ln&iacute;.</li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainVertical.svg&amp;filetimestamp=20240101173106&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainVertical.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainVertical.html" title="Sketcher ConstrainVertical">Vertik&aacute;ln&iacute; vazba</a>: Vazba zaji&scaron;&#357;uje, &#382;e p&#345;&iacute;mky nebo dvojice bod&#367; jsou vertik&aacute;ln&iacute;.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainParallel.svg&amp;filetimestamp=20240101173144&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainParallel.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainParallel.html" title="Sketcher ConstrainParallel">Vazba rovnob&#283;&#382;nosti</a>: Vynut&iacute;, aby byly linie rovnob&#283;&#382;n&eacute;.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Perpendicular Constraint</a>: Constrains two lines to be perpendicular, or two edges, or an edge and an axis, to be perpendicular at their intersection. The constraint can also connect two edges, forcing them to be perpendicular at the joint.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainPerpendicular.svg&amp;filetimestamp=20240101173234&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainPerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainPerpendicular.html" title="Sketcher ConstrainPerpendicular">Vazba kolmosti</a>: Zaji&scaron;&#357;uje, aby dv&#283; p&#345;&iacute;mky byly kolm&eacute;, nebo aby dv&#283; hrany, nebo hrana a osa, byly kolm&eacute; v m&iacute;st&#283; jejich pr&#367;se&#269;&iacute;ku. Vazba m&#367;&#382;e tak&eacute; spojit dv&#283; hrany a vynutit jejich kolmost v m&iacute;st&#283; spoje.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_ConstrainTangent.svg&amp;filetimestamp=20240101173249&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ConstrainTangent.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_ConstrainTangent.html" title="Sketcher ConstrainTangent">Tangent/Collinear Constraint</a>: Constrains two edges, or an edge and an axis, to be tangent. The constraint can also connect two edges, forcing them to be tangent at the joint. If two lines are selected they are made collinear.</li></ul>
 </div>
@@ -666,13 +664,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118122951
+Cached time: 20260118123124
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.443 seconds
-Real time usage: 0.641 seconds
-Preprocessor visited node count: 1484/1000000
+CPU time usage: 0.497 seconds
+Real time usage: 2.165 seconds
+Preprocessor visited node count: 1483/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -682,19 +680,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.581      1 -total
- 25.93%    9.227      1 Template:Sketcher_Tools_navi/cs
- 14.42%    5.132      8 Template:VersionPlus
- 14.18%    5.045      2 Template:Navigation_menu_2
- 11.66%    4.147      1 Template:Userdocnavi/cs
-  8.70%    3.097      1 Template:PropertyView
-  6.57%    2.336     34 Template:Version
-  5.26%    1.871      2 Template:Docnav
-  5.22%    1.859     14 Template:KEY
-  4.01%    1.426      6 Template:Caption
+100.00%  125.772      1 -total
+ 24.36%   30.638      1 Template:Sketcher_Tools_navi/cs
+ 14.52%   18.267      8 Template:VersionPlus
+ 11.40%   14.332      2 Template:Navigation_menu_2
+ 10.35%   13.016     14 Template:KEY
+  9.68%   12.178      1 Template:PropertyView
+  8.54%   10.742      1 Template:Userdocnavi/cs
+  8.27%   10.398     34 Template:Version
+  6.29%    7.905      2 Template:Docnav
+  5.97%    7.506      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118122950 and revision id 1740443. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118123122 and revision id 1740445. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
